# gaussian_lic_ros2

./: .dockerignore  .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yaml
docker/: Dockerfile.jazzy  compose.yaml  entrypoint.sh
docs/: BASELINE_DATA.md  CALIBRATION_SCHEMA.md  COMMON_ERRORS.md  DOCKER.md  LICENSE_POLICY.md  PORTING_NOTES.md  RELEASE_MILESTONES.md  ROADMAP.md  ROS2_SEMANTICS.md  SMOKE_TESTS.md  STATUS_SCHEMA.md  UPSTREAM_INVENTORY.md  coco_lic2_inventory.md  cuda_probe_results.md  lic2_surface_inventory.md  lic2_vs_v1_diff.md  native_production_preset.json  sm120_status.md  strict_data_status.json  strict_data_status.md  strict_parity_matrix.json  strict_parity_matrix_report.json  strict_parity_matrix_report.md
results/fastlivo/LiDAR_Degenerate_native_tracking_scan_order_60s/: native_tracking_report.json
results/fastlivo2/CBD_Building_01_gaussian_feedback_se3_samples1000_60s_probe/: native_tracking_report.json  native_tracking_trajectory_compare.json
results/fastlivo2/CBD_Building_01_gaussian_feedback_se3_samples4000_60s_probe/: native_tracking_report.json  native_tracking_trajectory_compare.json
results/fastlivo2/CBD_Building_01_gaussian_feedback_visual_dt500ms_60s_probe/: native_tracking_report.json  native_tracking_trajectory_compare.json
results/fastlivo2/CBD_Building_01_gaussian_feedback_visual_dt500ms_full120_probe/: native_tracking_report.json  native_tracking_trajectory_compare.json
results/fastlivo2/CBD_Building_01_gaussian_snapshot_pose_correction_quality_gate_60s_probe/: native_tracking_report.json  native_tracking_trajectory_compare.json
results/fastlivo2/CBD_Building_01_native_tracking_cocolic_reference_imu_scale_full_120s/: native_tracking_report.json  native_tracking_trajectory_compare.json
results/mcd/ntu_day_01_native_tracking_scan_order_60s/: native_tracking_report.json
scripts/: audit_strict_data_inputs.py  baseline_readiness.py  build_jazzy.sh  check_native_production_preset.py  check_profiles.py  check_ros2_semantics_contract.py  check_strict_doc_status.py  check_strict_parity_matrix.py  ci_replay_smoke.sh  collect_current_results.sh  continuous_time_native_reference_parity.sh  continuous_time_node_bag_smoke.sh  continuous_time_node_smoke.py  continuous_time_node_smoke.sh  convert_ros1_bag_to_rosbag2.py  create_synthetic_bag.sh  decimate_tum_trajectory.py  diagnose_native_tracking_drift.py  eval_render_quality.py  fastlivo2_ros1_to_frontend_raw.py  fetch_sharepoint_file.sh  fetch_upstreams.sh  odom_to_tum.py  patch_upstream_baseline.py  perf_regression.py  reproduction_report.py  run_curated_fastlivo2_report.sh  run_m2dgr_tracking_sweep.sh  run_native_tracking_bag_report.sh  run_strict_cbd_pipeline.sh  run_strict_parity_queue.sh  run_upstream_baseline.sh  smoke_test.sh  strict_rosbag2_play.sh  tracking_smoke_test.sh  trajectory_compare.py  trajectory_table_to_tum.py  upstream_baseline_build_attempt.sh  verify_workspace.sh
src/gaussian_lic_bringup/: package.xml  setup.cfg  setup.py
src/gaussian_lic_bringup/config/: default.yaml  fastlivo.yaml  fastlivo2.yaml  m2dgr.yaml  mcd.yaml  r3live.yaml
src/gaussian_lic_bringup/launch/: continuous_time.launch.py  run_bag.launch.py  tracking.launch.py
src/gaussian_lic_bringup/resource/: gaussian_lic_bringup
src/gaussian_lic_bringup/rviz/: gaussian_lic.rviz
src/gaussian_lic_frontend/src/: lic2_contract_adapter_node.cpp
src/gaussian_lic_mapping/: CMakeLists.txt  package.xml
src/gaussian_lic_mapping/cuda/fused_ssim/: fused_ssim.cu  fused_ssim_autograd.cpp
src/gaussian_lic_mapping/cuda/simple_knn/: simple_knn.cu  simple_knn.hpp  spatial.cu
src/gaussian_lic_mapping/include/gaussian_lic_mapping/: backend_config.hpp  frame_data.hpp  mapper_dataset.hpp  torch_backend.hpp
src/gaussian_lic_mapping/include/gaussian_lic_mapping/cuda/: fused_ssim.hpp  simple_knn.hpp
src/gaussian_lic_mapping/src/: frame_data.cpp  fused_ssim_probe.cpp  mapper_dataset.cpp  mapping_node.cpp  simple_knn_probe.cpp  torch_backend.cpp  torch_backend_probe.cpp  torch_cuda_backend_probe.cpp
src/gaussian_lic_msgs/: CMakeLists.txt  package.xml
src/gaussian_lic_msgs/msg/: Gaussian.msg  GaussianArray.msg  MappingStatus.msg  TrackingStatus.msg
src/gaussian_lic_msgs/srv/: SaveMap.srv
src/gaussian_lic_tools/: package.xml  setup.cfg  setup.py
src/gaussian_lic_tools/gaussian_lic_tools/: native_tracking_recorder.py  offline.py  status_stub.py  synthetic_gs_frame_pub.py  topic_probe.py
src/gaussian_lic_tools/resource/: gaussian_lic_tools
src/gaussian_lic_tracking/: CMakeLists.txt  package.xml
src/gaussian_lic_tracking/include/gaussian_lic_tracking/: gaussian_snapshot.hpp  imu_propagator.hpp  lidar_factor.hpp  sliding_window_optimizer.hpp  time.hpp  trajectory_manager.hpp  visual_factor.hpp
src/gaussian_lic_tracking/include/gaussian_lic_tracking/spline/: continuous_time_lidar_factor.hpp  continuous_time_sliding_window.hpp  trajectory_estimator.hpp
src/gaussian_lic_tracking/src/: continuous_time_node.cpp  continuous_time_sliding_window.cpp  gaussian_snapshot.cpp  imu_preintegrator.cpp  imu_propagator.cpp  lidar_factor.cpp  sliding_window_optimizer.cpp  tracking_node.cpp  trajectory_estimator.cpp  trajectory_manager.cpp  visual_factor.cpp
src/gaussian_lic_tracking/test/: continuous_time_lidar_factor_probe.cpp  continuous_time_sliding_window_probe.cpp  gaussian_snapshot_probe.cpp  imu_preintegrator_probe.cpp  imu_propagator_probe.cpp  lidar_factor_probe.cpp  sliding_window_geometric_jacobian_probe.cpp  sliding_window_imu_bias_jacobian_probe.cpp  sliding_window_marginalization_probe.cpp  sliding_window_optimizer_probe.cpp  sliding_window_plane_factor_probe.cpp  sliding_window_point_factor_probe.cpp  sliding_window_prior_jacobian_probe.cpp  sliding_window_schur_marginalization_probe.cpp  sliding_window_se3_photometric_factor_probe.cpp  sliding_window_smoothness_factor_probe.cpp  sliding_window_visual_factor_probe.cpp  trajectory_estimator_probe.cpp  trajectory_manager_probe.cpp  visual_factor_probe.cpp  visual_se3_jacobian_probe.cpp
(+4 files in other folders)
