<?xml version="1.0"?>
<package format="3">
  <name>gaussian_lic_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration package for the ROS2 Gaussian-LIC port.</description>
  <maintainer email="frank@example.com">Frank</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>gaussian_lic_tools</exec_depend>
  <exec_depend>gaussian_lic_mapping</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rosbag2_transport</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
