<?xml version="1.0"?>
<package format="3">
  <name>gaussian_lic_mapping</name>
  <version>0.1.0</version>
  <description>Native ROS2 mapping node for the Gaussian-LIC port.</description>
  <maintainer email="frank@example.com">Frank</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>gaussian_lic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>opencv</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
